Made height of calculator responsive Essentially, fixed a bug where adding too much input causes the calc buttons to overflow outside of the calculator body itself.

--- a/style.css
+++ b/style.css
@@ -27,11 +27,13 @@ header {
 #everything {
     position: absolute;
     transform: translateX(-50%);
+    padding-bottom: 2em;
+    margin-bottom: 2em;
     border: 4px solid black;
     border-radius: 10px;
     margin-top: 50px;
     left: 50%;
-    height: 625px;
+    min-height: 625px;
     width: 50%;
     min-width: 400px;
     max-width: 500px;
